# videopipeline

./: AGENTS.md  CMakeLists.txt  README.md  cameraCapture.7z  test_pipeline.txt  test_pipeline.yaml
.github/workflows/: ci.yml
cmake/toolchains/: aarch64-gcc.cmake  rpi-yocto.cmake
docker/: Dockerfile
docs/: API.md  ARCHITECTURE.md  BLOCKS.md  CONFIGURATION.md  CROSS_COMPILE.md  DEVELOPMENT.md  PERFORMANCE.md  TROUBLESHOOTING.md  gitactions.md
examples/: CMakeLists.txt  console_output.conf  libcamera_to_console.conf  libcamera_to_console.yaml  libcamera_to_tcp.conf  libcamera_to_tcp.yaml  multi_output.yaml  performance_test.cpp  simple_test_pattern.cpp  test_pattern_to_file.conf  test_pattern_to_file.yaml
include/video_pipeline/: block.h  block_registry.h  buffer.h  config_parser.h  logger.h  pipeline_manager.h  threading.h  timer.h  video_pipeline.h  video_sink.h  video_source.h
include/video_pipeline/blocks/: console_sink.h  file_sink.h  libcamera_source.h  tcp_sink.h  test_pattern_source.h
scripts/: build_native.sh  build_rpi.sh  run-yocto-rpi-local.sh  run_linux.sh  run_rpi_remote.sh  vp.sh
src/: main.cpp
src/blocks/: console_sink.cpp  file_sink.cpp  libcamera_source.cpp  tcp_sink.cpp  test_pattern_source.cpp
src/core/: block.cpp  block_registry.cpp  buffer.cpp  config_parser.cpp  framework.cpp  pipeline_manager.cpp  threading.cpp  video_sink.cpp  video_source.cpp
src/utils/: logger.cpp  timer.cpp
